--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@tailwindcss/vite": "^4.1.8",
+    "axios": "^1.10.0",
     "firebase": "^11.9.0",
     "framer-motion": "^12.16.0",
     "lottie-react": "^2.4.1",
